fixed spacing

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -120,7 +120,7 @@ header .intro-text .skills {
     }
 
     header .intro-text .name {
-        font-size: 4.75em;
+        font-size: 3.75em;
     }
 
     header .intro-text .skills {
@@ -340,7 +340,7 @@ footer {
 }
 
 footer h3 {
-    margin-bottom: 30px;
+    margin-bottom: 5px;
 }
 
 footer .footer-above {
